--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ rvm:
   - 2.2.5
   - 2.3.3
   - 2.4.0
+before_install:
+    - gem install bundler
 script:
     - bundle exec rake test
     - bundle exec rake coveralls:push
